cluster/istio/istio-ingress/istio-gateway/app/virtual-services/keycloak-vs.yaml
---
# https://www.keycloak.org/server/reverseproxy
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: istio-ingress
spec:
  hosts:
    - 'id.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway 
  http:
    - name: http
      match:
        - uri:
            prefix: "/"
        # - uri:
        #     prefix: "/realms"
        # - uri:
        #     prefix: "/js"
        # - uri:
        #     prefix: "/resources"
        # - uri:
        #     prefix: "/robots"
      route:
        - destination:
            port:
              number: 80
            host: keycloak-http.sso.svc.cluster.local
          weight: 100
